bk_ida/gccida/g2/make_extraction
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6375:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6376:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6378:4: error: expected ';' after expression
rtx v14; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6378:5: error: use of undeclared identifier 'v14'
rtx v14; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6379:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6380:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r11d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6384:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6384:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6388:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6389:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6393:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6393:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6397:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6404:4: error: expected ';' after expression
rtx v41; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6404:5: error: use of undeclared identifier 'v41'
rtx v41; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6405:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/combine.c:6412:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wanted_inner_mode; // [rsp+14h] [rbp-54h] 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_extraction/src/obj/combine.o] Error 1
